bugs fix: if no icon in a button, no space to the left ; align modal buttons to the right.

--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -41,7 +41,8 @@ button.tfw-view-button.wide {
   filter: saturate(100%) brightness(120%);
 }
 
-.tfw-view-button > div.text.hide {
+.tfw-view-button > div.text.hide,
+.tfw-view-button > div.icon.hide {
   display: none;
 }
 
